--- a/finqwerty/src/main/res/values/strings.xml
+++ b/finqwerty/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">FinQwerty Keyboard Layouts</string>
+    <string name="app_name">TitanQwerty Keyboard Layouts</string>
 
     <string name="xt894_finnish_1" translatable="false">FinQwerty Droid 4, Motorola</string>
     <string name="xt897_finnish_1" translatable="false">FinQwerty Photon Q, Motorola</string>
@@ -27,8 +27,8 @@
     <string name="livmoto_nor_1">FinQwerty Livermorium Moto Mod, Norwegian</string>
     <string name="livmoto_ger_1">FinQwerty Livermorium Moto Mod, German</string>
     
-    <string name="pocket_ger_1">FinQwerty Unihertz Titan Pocket, German QWERTY</string>
-    <string name="pocket_ger_2">FinQwerty Unihertz Titan Pocket, German QWERTZ</string>
+    <string name="pocket_ger_1">TitanQwerty Unihertz Titan Pocket, German QWERTY</string>
+    <string name="pocket_ger_2">TitanQwerty Unihertz Titan Pocket, German QWERTZ</string>
 
     <string name="pro1_qwerty_bul_pho">FinQwerty F(x)tec Pro1, Bulgarian (phonetic) for physical US QWERTY</string>
     <string name="pro1_qwertz_che_fra">FinQwerty F(x)tec Pro1, Swiss French for physical DE QWERTZ</string>
